feat: hits_vs_sigma app + runner, event display UI polish, constants refactor\n\n- Add hits_vs_sigma executable: counts total hits vs sigma thresholds with edge+calib masks; saves PDF with Run in title\n- New script scripts/hitsVsSigma.sh: find run, use previous CAL .cal, convert/extract as needed, no auto-open\n- analyzeRun.sh: use previous CAL by default with forward/current CAL fallbacks; pass -c to analyzer\n- Add project-wide constants.h (N_DETECTORS=3, N_CHANNELS=384) and apply in apps\n- README: update usage, scripts overview, calibration policy\n- CMake: wire hits_vs_sigma target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,12 @@ target_include_directories( event_display PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/in
 target_link_libraries( event_display ${OCA_LIBS} )
 install( TARGETS event_display DESTINATION bin )
 
+cmessage( STATUS "Creating hits_vs_sigma app..." )
+add_executable( hits_vs_sigma ${CMAKE_CURRENT_SOURCE_DIR}/src/hits_vs_sigma.cpp)
+target_include_directories( hits_vs_sigma PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/inc )
+target_link_libraries( hits_vs_sigma ${OCA_LIBS} )
+install( TARGETS hits_vs_sigma DESTINATION bin )
+
 cmessage( STATUS "Creating bmRawToRootConverter app..." )
 add_executable( bmRawToRootConverter ${CMAKE_CURRENT_SOURCE_DIR}/src/bmRawToRootConverter.cxx)
 target_include_directories( bmRawToRootConverter PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/inc )
